[gd_scene load_steps=6 format=3 uid="uid://yckhujga46bw"]

[ext_resource type="Script" path="res://player/checkpoint.gd" id="1_dt0f0"]
[ext_resource type="Texture2D" uid="uid://d24kl3vtfirna" path="res://colored-transparent_packed.png" id="2_q2tvm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g3mmy"]
size = Vector2(28, 93)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cq64e"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_imthg"]
size = Vector2(32, 32)

[node name="Checkpoint" type="Node2D"]
position = Vector2(176, 208)
script = ExtResource("1_dt0f0")

[node name="UpperSprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -125)
scale = Vector2(2, 2)
texture = ExtResource("2_q2tvm")
hframes = 49
vframes = 22
frame = 881

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_q2tvm")
hframes = 49
vframes = 22
frame = 881

[node name="Area2D" type="Area2D" parent="." groups=["player_checkpoint"]]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -62.5)
shape = SubResource("RectangleShape2D_g3mmy")

[node name="RespawnPointMarker" type="Marker2D" parent="."]
position = Vector2(0, -63)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_cq64e")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -125)
shape = SubResource("RectangleShape2D_imthg")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
